# FastApi

./: readme.md
fastapi-helloworld/: README.md  pyproject.toml
fastapi-helloworld/fastapi_helloworld/: main.py
fastapi-todoapp/: .env  pyproject.toml
fastapi-todoapp/fastapi_todoapp/: main.py  settings.py
fastapi-todoapp/tests/: test_main.py
